<resources>
    <string name="app_name">FreshCalculator</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_1_x">1/x</string>
    <string name="_x">×</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="racine_carree">√x</string>
    <string name="parenthese_close">)</string>
    <string name="parenthese_open">(</string>
    <string name="back_delete">⌫</string>
    <string name="Clear">AC</string>
    <string name="Power">xⁿ</string>
    <string name="factoriel">x!</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="_3">3</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="virgule">,</string>
    <string name="pi">π</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="voice_to_calcul">Voice to calcul</string>
    <string name="photo_to_calcul">Photo to calcul</string>
    <string name="mathError">Erreur</string>
    <string name="plus_moins">-x</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="bin">bin</string>
    <string name="dec">dec</string>
    <string name="mod">mod</string>
    <string name="earth">∞</string>
    <string name="Univers">La réponse à la vie, l\'univers et tout le reste</string>
    <string name="item1">Mode Graphique</string>
    <string name="name">Ajouter une nouvelle catégorie</string>
    <string name="add">Ajouter</string>
    <string name="rechercher">Rechercher</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview_2">textView 2</string>
    <string name="textview_3">textView 3</string>
    <string name="supprimer_historique">Supprimer Historique</string>
    <string name="textview_4">textView 4</string>
    <string name="todo">TODO</string>
    <string name="Histo">Historique</string>
    <string name="calcul_to_tell">calcul to tel</string>
    <string name="copied_string">Calcul copié dans le presse-papier</string>
    <string name="imagetotext">ImageToText</string>
    <string name="entrer_votre_fonction">Entrer votre fonction: 2*X+1</string>
    <string name="x_maj">X</string>
    <string name="multi_symbole">*</string>
    <string name="partager_l_historique">Partager l\'historique</string>
    <string name="partager_le_graphe">partager le graphe</string>
    <string name="r_solveur_d_quation_quadratrique">Résolveur d\'équation quadratrique</string>
    <string name="r_soudre_ax_2_bx_c_0">Résoudre ax² + bx + c = 0</string>
    <string name="b">b</string>
    <string name="a">a</string>
    <string name="c">c</string>
    <string name="convertisseur_de_temp_rature">Convertisseur de température</string>
    <string name="calcul_de_vitesse_en_temps_r_el">Calcul de vitesse en temps réel</string>
    <string name="convertisseur_de_temp_rature_fahrenheit_en_celsius_f_c">Convertisseur de température Fahrenheit en Celsius F° à C°</string>
    <string name="_0_0_f">0.0 F</string>
    <string name="_0_0_c">0.0 C</string>
    <string name="calculateur_de_vitesse_en_temps_r_el">Calculateur de vitesse en temps réel</string>
    <string name="_0_0_m_s">0.0 m/s</string>
    <string name="activity_history">Historique</string>
    <string name="activity_history_desactived">Historique désactivé</string>
    <string name="activity_main">Calculatrice</string>
    <string name="activity_main_desactived">Calculatrice désactivée</string>
    <string name="activity_graph">Mode graphique</string>
    <string name="activity_graph_desactived">Mode graphique désactivée</string>
    <string name="activity_speed">Calculateur de vitesse</string>
    <string name="activity_speed_desactived">Calculateur de vitesse désactivé</string>
    <string name="activity_temp">Convertisseur de température</string>
    <string name="activity_temp_desactived">Convertisseur de température désactivé</string>
    <string name="running_frame">Running Frame</string>
    <string name="exemple">Example</string>
    <string name="supprimer">Supprimer</string>
    <string name="Add_note">Ajouter une note</string>
    <string name="ajout_de_note">Ajout de note</string>
    <string name="r_solveur_d_quation_3_degr_s">Résolveur d\'équation 3 degrés</string>
    <string name="r_soudre_ce_syst_me">Résoudre ce système</string>
    <string name="_3x_2y_z_1">3x + 2y - 1z = 1</string>
    <string name="_2x_2y_4z_2">2x - 2y + 4z = -2</string>
    <string name="x_y_2_z_0">-1x + 0.5y - 1z = 0</string>
</resources>
