<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:title="@string/item1"
    android:id="@+id/title1"
    app:showAsAction="never"/>
    <item
        android:title="@string/r_solveur_d_quation_quadratrique"
        android:id="@+id/title2"
        app:showAsAction="never"/>
    <item
        android:title="@string/r_solveur_d_quation_3_degr_s"
        android:id="@+id/title6"
        app:showAsAction="never"/>
    <item
        android:title="@string/convertisseur_de_temp_rature"
        android:id="@+id/title3"
        app:showAsAction="never"/>
    <item
        android:title="@string/calcul_de_vitesse_en_temps_r_el"
        android:id="@+id/title4"
        app:showAsAction="never"/>
    <item
        android:title="@string/ajout_de_note"
        android:id="@+id/title5"
        app:showAsAction="never"/>
</menu>