<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="activitymain"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/activity_main"
        android:shortcutLongLabel="@string/activity_main"
        android:shortcutDisabledMessage="@string/activity_main_desactived"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="freshloic.fr.freshcalculator"
            android:targetClass="freshloic.fr.freshcalculator.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="activitygraph"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/activity_graph"
        android:shortcutLongLabel="@string/activity_graph"
        android:shortcutDisabledMessage="@string/activity_graph_desactived"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="freshloic.fr.freshcalculator"
            android:targetClass="freshloic.fr.freshcalculator.GraphActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="activityHistory"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/activity_history"
        android:shortcutLongLabel="@string/activity_history"
        android:shortcutDisabledMessage="@string/activity_history_desactived"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="freshloic.fr.freshcalculator"
            android:targetClass="freshloic.fr.freshcalculator.HistoryActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="activityspeed"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/activity_speed"
        android:shortcutLongLabel="@string/activity_speed"
        android:shortcutDisabledMessage="@string/activity_speed_desactived"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="freshloic.fr.freshcalculator"
            android:targetClass="freshloic.fr.freshcalculator.SpeedActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="activitytemperature"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/activity_temp"
        android:shortcutLongLabel="@string/activity_temp"
        android:shortcutDisabledMessage="@string/activity_temp_desactived"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="freshloic.fr.freshcalculator"
            android:targetClass="freshloic.fr.freshcalculator.TemperatureActivity" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>