<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/supprimer_historique"
        android:id="@+id/supressionHisto"
        android:icon="@drawable/ic_action_delete_sweep"
        app:showAsAction="always">
    </item>
    <item
        android:title="@string/partager_l_historique"
        android:id="@+id/shareHisto"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="always">
    </item>
    <item
        android:title="@string/rechercher"
        android:id="@+id/recherche"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView">
    </item>
</menu>