<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".threeEquationSolverActivity">

    <EditText
        android:id="@+id/eq1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_3x_2y_z_1"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/eq2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_2x_2y_4z_2"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/eq3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/x_y_2_z_0"
        android:inputType="text"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_go_three"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/r_soudre_ce_syst_me"
        android:theme="@style/DefautNumberButton" />

    <TextView
        android:id="@+id/textView_resultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />
</LinearLayout>