<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:weightSum="100"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="66.6"
        android:gravity="center"
        android:text="@string/textview_1"
        android:focusable="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="false"
        android:layout_weight="33.3">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/textview_2"
            android:textAlignment="center"
            android:layout_height="30dp"
            android:id="@+id/textView1"
            android:focusable="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/textview_3"
            android:textAlignment="center"
            android:layout_height="30dp"
            android:id="@+id/textView2"
            android:focusable="false"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/textview_4"
            android:textAlignment="center"
            android:layout_height="30dp"
            android:focusable="false"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageReverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/todo"
                android:focusable="false"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/imageDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/todo"
                android:focusable="false"
                app:srcCompat="@drawable/ic_action_delete_sweep" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:focusable="false"
                android:background="@color/colorAccent">

                <freshloic.fr.freshcalculator.MySpinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:focusable="false"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>